Added RSAKey and AuthConfig